New changes in DB

--- a/Project/web.config
+++ b/Project/web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
     Note: As an alternative to hand editing this file you can use the 
     web admin tool to configure settings for your application. Use
@@ -15,10 +15,12 @@
   <appSettings />
   <connectionStrings>
     <add name="binddropdown" connectionString="SERVER=182.50.133.110;DATABASE=EmpPayroll;UID=EmpPayroll;PASSWORD=oab1*F61;max pool size=50000000;" />
-    <add name="EmpPayrollEntities" connectionString="metadata=res://*/App_Code.MyModel.csdl|res://*/App_Code.MyModel.ssdl|res://*/App_Code.MyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=182.50.133.110;initial catalog=EmpPayroll;persist security info=True;user id=EmpPayroll;password=oab1*F61;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="EmpPayrollConnectionString" connectionString="Data Source=182.50.133.110;Initial Catalog=EmpPayroll;Persist Security Info=True;User ID=EmpPayroll;MultipleActiveResultSets=True;Application Name=EntityFramework"
-      providerName="System.Data.SqlClient" />
+    <add name="EmpPayrollConnectionString" connectionString="Data Source=182.50.133.110;Initial Catalog=EmpPayroll;Persist Security Info=True;User ID=EmpPayroll;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="EmpPayrollEntities" connectionString="metadata=res://*/App_Code.MyModel.csdl|res://*/App_Code.MyModel.ssdl|res://*/App_Code.MyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=182.50.133.110;initial catalog=EmpPayroll;persist security info=True;user id=EmpPayroll;password=oab1*F61;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EmpPayrollEntities1" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=182.50.133.110;initial catalog=EmpPayroll;persist security info=True;user id=EmpPayroll;password=oab1*F61;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EmpPayrollEntities2" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=182.50.133.110;initial catalog=EmpPayroll;persist security info=True;user id=EmpPayroll;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="db_a85de9_pahrmdbEntities" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL5102.site4now.net;initial catalog=db_a85de9_pahrmdb;persist security info=True;user id=db_a85de9_pahrmdb_admin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="pahrmdbEntities" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL5102.site4now.net;initial catalog=db_a85de9_pahrmdb;persist security info=True;user id=db_a85de9_pahrmdb_admin;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <!-- 
@@ -62,7 +64,6 @@
     <customErrors mode="Off" />
   </system.web>
   <system.webServer>
-
     <defaultDocument enabled="true">
       <files>
         <clear />
